log
sá., 19 de abr. de 2025  0:27:49: 
 hashmap.c | 40 ++++++++++++++++++++++++++++++++++------
 1 file changed, 34 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:43:44: error: implicit declaration of function 'enLarge' [-Werror=implicit-function-declaration]
     if(map->size >= (map->capacity * 0.7)) enLarge(map);
                                            ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
sá., 19 de abr. de 2025  0:28:34: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b972bc5
sá., 19 de abr. de 2025  0:29:12: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
65cb4c6
sá., 19 de abr. de 2025  0:30:43: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 50/70
ade0175
sá., 19 de abr. de 2025  0:38:23: 
 hashmap.c | 24 ++++++++++++++++++++----
 1 file changed, 20 insertions(+), 4 deletions(-)
 tests:  13|1
total_score: 60/70
74c1736
sá., 19 de abr. de 2025  0:41:23: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|0
total_score: 70/70
d249291
